[tool.poetry]
name = "py-aiger-gridworld"
version = "0.2.0"
readme="README.md"
description = "Library for modeling gridworlds as AIGER circuits."
authors = ["Marcell Vazquez-Chanlatte <mvc@linux.com>"]
license = "MIT"
packages = [
    { include = "aiger_gridworld" },
]

[tool.poetry.dependencies]
python = "^3.6"
funcy = "^1.13"
py-aiger = "^4.0.0"
py-aiger-bv = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.7"
pytest-flake8 = "^1.0"
pytest-xdist = "^1.29"
codecov = "^2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
