[tool.poetry]
name = "py-aiger-gridworld"
version = "0.4.3"
readme="README.md"
description = "Library for modeling gridworlds as AIGER circuits."
authors = ["Marcell Vazquez-Chanlatte <mvc@linux.com>"]
license = "MIT"
packages = [
    { include = "aiger_gridworld" },
]

[tool.poetry.dependencies]
python = "^3.9"
funcy = "^1.13"
py-aiger = "^6.0.0"
py-aiger-bv = "^4.0.0"
py-aiger-discrete = "^0.1.10"
bidict = "^0.22"

[tool.poetry.dev-dependencies]
pytest-xdist = "^3"
parsimonious = "^0.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
